--- a/coffeeshop/templates/coffeeshop/description.html
+++ b/coffeeshop/templates/coffeeshop/description.html
@@ -1,2 +1,8 @@
-<html>
-</html>
+{% extends 'coffeeshop/base.html' %}
+{% block content %}
+<h1> {{ product.name_product }} </h1>
+<p> {{ product.stock }} </p>
+<p> {{ product.id_product_type.product_description }} </p>
+<p> {{ product.id_product_type.product_type }} </p>
+<p> {{ product.price }} </p>
+{% endblock content %}
