fixed views and initialize product_description template

--- a/coffeeshop/templates/coffeeshop/description.html
+++ b/coffeeshop/templates/coffeeshop/description.html
@@ -1,8 +1,9 @@
-{% extends 'coffeeshop/base.html' %}
-{% block content %}
-<h1> {{ product.name_product }} </h1>
-<p> {{ product.stock }} </p>
-<p> {{ product.id_product_type.product_description }} </p>
-<p> {{ product.id_product_type.product_type }} </p>
-<p> {{ product.price }} </p>
-{% endblock content %}
+<html>
+	<head>
+		<title> No content </title>
+	</head>
+
+	<body>
+		<h1> No descriptions avaiable </h1>
+	</body>
+</html>
