--- a/coffeeshop/templates/coffeeshop/Pr.html
+++ b/coffeeshop/templates/coffeeshop/Pr.html
@@ -139,7 +139,7 @@ function loginB() {
     --><label for="radio5">★</label>
   </p>
 </form></h4>
-<h5>COP {{ product.price }} <form action ="{% url 'coffeeshop:description' product.id_product %}"><input type="submit" value="Leer más" id="butmas"> </form></h5>
+<h5>COP {{ product.price }} <form action ="{% url 'coffeeshop:product' product.id_product %}"><input type="submit" value="Leer más" id="butmas"> </form></h5>
 
     <table border="0" id="t1">
     
