--- a/coffeeshop/templates/coffeeshop/admin-registrar_venta.html
+++ b/coffeeshop/templates/coffeeshop/admin-registrar_venta.html
@@ -1,45 +1,28 @@
-<!-- -->
-<!DOCTYPE html>
-<html lang="es">
-	<head>
-	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Juan Valdez - ADMIN</title>
-		<link  type="text/css" rel="stylesheet" href="../../static/coffeeshop/styles.css">
-		<link  type="text/css" rel="stylesheet" href="../../static/coffeeshop/admin-registrar_venta.css">
-	</head>
+{% extends 'coffeeshop/admin-base.html' %}
+	{% block pestanasAD %}
+	<li><a class="estoy" href="#">Registrar compra</a></li>
+	<li><a href="./admin-revisar_producto.html">Revisar productos</a></li>
+	<li><a href="./admin-anadir_producto.html">Añadír productos</a></li>
+	<li><a href="./admin-revisar_ventas.html">Revisar producto</a></li>
+	{% endblock %}
 
-	<body>
-		<div class="butPrinci">
-			<ul>
-				<li><a class="estoy" href="#">Registrar compra</a></li>
-				<li><a href="./admin-revisar_producto.html">Revisar productos</a></li>
-				<li><a href="./admin-anadir_producto.html">Añadír productos</a></li>
-				<li><a href="./admin-revisar_ventas.html">Revisar producto</a></li>
-			</ul>
-		</div>
-
-		<div class="areaTrabajo">
-			
-			<div class="anadriProducto">
+	{% block admi-areatrabajoAD %}			
+		<div class="anadriProducto">
 				<button>Añadír</button>
-			</div>
-
-			<div class="infoCliente">
-				
-			</div>
-
-			<div class="tabla">
-				
-			</div>
-			
-			<div class="infoFactura">
-				
-			</div>
-
 		</div>
+
+		<div class="infoCliente">
+				
+		</div>
+
+		<div class="tabla">
+				
+		</div>
+				
+		<div class="infoFactura">
 		
-		<img class="imagenes1" src="../img/juanvaldez.png">
-		<img class="imagenes2" src="../img/EafitNormal.png">
-		
-	</body>
-</html>
+		</div>
+	{% endblock %}
+
+	{% block img-admin%}
+	{% endblock %}
