--- a/coffeeshop/templates/coffeeshop/user-base.html
+++ b/coffeeshop/templates/coffeeshop/user-base.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block pestana-usuario %}
 	<nav>
-		<a href="#">Inicio</a>
-		<a href="#">Servicios</a>
-		<a href="#">Proyectos</a>
-		<a href="#">Contactos</a>
+		<a href="{% url 'coffeeshop:h1' %}">Inicio</a>
+		<a href="{% url 'coffeeshop:h2' %}">Servicios</a>
+		<a href="{% url 'coffeeshop:h3' %}">Proyectos</a>
+		<a href="{% url 'coffeeshop:h4' %}">Contactos</a>
 	</nav>
 {% endblock %}
