Añadiendo organizado el boton de user

--- a/coffeeshop/templates/coffeeshop/Pr.html
+++ b/coffeeshop/templates/coffeeshop/Pr.html
@@ -38,7 +38,8 @@ function loginB() {
     
     <nav>
         <br><br><a onclick="loginB()"> <h6>Login</h6> </a>
-	<a href="Pr2.html"> <img src="{% static 'coffeeshop/img/COP.png' %}" width="30" id="COP"> <div id="h8">COP</div></a>
+	<a href="Pr2.html"> 
+	<img src="{% static 'coffeeshop/img/COP.png' %}" width="45" id="COP"> <div id="h8">User</div></a>
     </nav>
     
     <div id="logo1">
