Button user fixed up

--- a/coffeeshop/templates/coffeeshop/Pr.html
+++ b/coffeeshop/templates/coffeeshop/Pr.html
@@ -38,7 +38,7 @@ function loginB() {
     
     <nav>
         <br><br><a onclick="loginB()"> <h6>Login</h6> </a>
-	<a href="Pr2.html"> 
+	<a href="{% url 'coffeeshop:user' %}"> 
 	<img src="{% static 'coffeeshop/img/COP.png' %}" width="45" id="COP"> <div id="h8">User</div></a>
     </nav>
     
