User template incomplete

--- a/coffeeshop/templates/coffeeshop/h4.html
+++ b/coffeeshop/templates/coffeeshop/h4.html
@@ -6,7 +6,7 @@
 {% load static %}
 {% block pestana-usuario %}
 	<nav>
-		<a href="{% url 'coffeeshop:h1' %}">Inicio</a>
+		<a href="{% url 'coffeeshop:index' %}">Inicio</a>
 		<a href="{% url 'coffeeshop:h2' %}">Puntos Jv</a>
 		<a href="{% url 'coffeeshop:h3' %}">Promociones</a>
 		<a href="{% url 'coffeeshop:h4' %}">Combos</a>
