--- a/coffeeshop/templates/coffeeshop/user-base.html
+++ b/coffeeshop/templates/coffeeshop/user-base.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block pestana-usuario %}
 	<nav>
-		<a href="{% url 'coffeeshop:h1' %}">Inicio</a>
+		<a href="{% url 'coffeeshop:index' %}">Inicio</a>
 		<a href="{% url 'coffeeshop:h2' %}">Punto Jv</a>
 		<a href="{% url 'coffeeshop:h3' %}">Promociones</a>
 		<a href="{% url 'coffeeshop:h4' %}">Combo</a>
