Agregada pestaña crear usuario

--- a/coffeeshop/templates/coffeeshop/admin-anadir_producto.html
+++ b/coffeeshop/templates/coffeeshop/admin-anadir_producto.html
@@ -4,6 +4,7 @@
 		<li><a href="./admin-revisar_producto.html">Revisar productos</a></li>
 		<li><a class="estoy" href="#">Añadír productos</a></li>
 		<li><a href="./admin-revisar_ventas.html">Revisar producto</a></li>
+		<li><a href="./admin-revisar_ventas.html">Registrar usuario</a></li>
 	{% endblock %}
 
 	{% block admi-areatrabajoAD %}			
