--- a/coffeeshop/templates/coffeeshop/admin-registrar_usuario.html
+++ b/coffeeshop/templates/coffeeshop/admin-registrar_usuario.html
@@ -1,10 +1,10 @@
 {% extends 'coffeeshop/admin-base.html' %}
 	{% block pestanasAD %}
 		<li><a href="./admin-registrar_venta.html">Registrar compra</a></li>
-		<li><a class="estoy" href="#">Revisar productos</a></li>
+		<li><a href="./admin-revisar_producto.html">Revisar productos</a></li>
 		<li><a href="./admin-anadir_producto.html">Añadír productos</a></li>
-		<li><a href="./admin-revisar_ventas.html">Revisar producto</a></li>
-		<li><a href="./admin-revisar_ventas.html">Registrar usuario</a></li>
+		<li><a href="#">Revisar producto</a></li>
+		<li><a class="estoy" href="./admin-revisar_ventas.html">Registrar usuario</a></li>
 	{% endblock %}
 
 	{% block admi-areatrabajoAD %}			
