--- a/coffeeshop/templates/coffeeshop/product_description.html
+++ b/coffeeshop/templates/coffeeshop/product_description.html
@@ -1,8 +1,8 @@
 {% extends 'coffeeshop/base.html' %}
-{% block content %}
+{% block pestanas %}
 <h1> {{ product.name_product }} </h1>
 <p> {{ product.stock }} </p>
 <p> {{ product.id_product_type.product_description }} </p>
 <p> {{ product.id_product_type.product_type }} </p>
 <p> {{ product.price }} </p>
-{% endblock content %}
+{% endblock pestanas %}
