--- a/coffeeshop/static/coffeeshop/css/style_user.css
+++ b/coffeeshop/static/coffeeshop/css/style_user.css
@@ -32,7 +32,7 @@ header {
 }
 
 header nav {
-	float: right;;
+	float: right;
 	line-height: 200px;
 	height: 140px;
 }
@@ -145,4 +145,8 @@ button:hover{
 	width: 100%;
 	height: 30%;
 	bottom: 0;
+}
+
+.form_class {
+	color: green;
 }
