--- a/coffeeshop/templates/coffeeshop/add_product.html
+++ b/coffeeshop/templates/coffeeshop/add_product.html
@@ -1,16 +1,19 @@
 {% extends 'coffeeshop/admin-base.html' %}
 	{% block pestanasAD %}
-			<li><a href=" {% url 'coffeeshop:register_sell' %}">Registrar venta</a></li>
+		<li><a href=" {% url 'coffeeshop:register_sell' %}">Registrar venta</a></li>
 		<li><a href=" {% url 'coffeeshop:check_sells' %}">Revisar ventas</a></li>
 		<li><a class="estoy" href=" {% url 'coffeeshop:add_products' %} ">Añadír producto</a></li>
 		<li><a href=" {% url 'coffeeshop:prom_comb' %}">Promociones y combos</a></li>
 		<li><a href=" {% url 'coffeeshop:admin_register' %}">Registrar usuario</a></li>
-{% endblock pestanasAD %}
+	{% endblock pestanasAD %}
 
 	{% block admi-areatrabajoAD %}			
-		<form method="POST"> {% csrf_token %}
-			{{ form.as_p }}
-			<input ty>
+		<form action="" method="POST"> {% csrf_token %}
+			{% for field in form %} 
+			{{ field.errors }} 
+			{{ field.label_tag }} {{ field }} <br>
+			{% endfor %}
+			<input type = "submit" name="save">
 	{% endblock admi-areatrabajoAD %}
 
 	{% block img-admin%}
