--- a/coffeeshop/templates/coffeeshop/form_example.html
+++ b/coffeeshop/templates/coffeeshop/form_example.html
@@ -3,9 +3,9 @@
 {% block pestanas %}
 	<h1> Holaaa </h1>
 	<form method= "POST"> {% csrf_token %}
-
 		{{ form.as_p }}
-		{{ form_2.as_p }}
+		{{ form2.as_p }}
+		{{ form3.as_p }}
 		<input type = "submit" name="save">
 	</form>
 {% endblock pestanas %}
