--- a/coffeeshop/templates/coffeeshop/admin_products.html
+++ b/coffeeshop/templates/coffeeshop/admin_products.html
@@ -3,10 +3,10 @@
 		<li><a href=" {% url 'coffeeshop:register_sell' %}">Registrar venta</a></li>
 		<li><a href=" {% url 'coffeeshop:check_sells' %}">Revisar ventas</a></li>
 		<li><a href=" {% url 'coffeeshop:add_products' %} ">Añadír producto</a></li>
-		<li><a clas="estoy" href=" {% url 'coffeeshop:product' %}">Productos</li>
-		<li><a href=" {% url 'coffeeshop:combo' %}">Combo</a></li>
+		<li><a href=" {% url 'coffeeshop:product' %}">Productos</li>
+		<li><a class="estoy" href=" {% url 'coffeeshop:combo' %}">Combo</a></li>
 		<li><a href=" {% url 'coffeeshop:admin_register' %}">Registrar usuario</a></li>
-	{% endblock pestanasAD%}
+	{% endblock pestanasAD %}
 
 	{% block admi-areatrabajoAD %}			
 	{% endblock admi-areatrabajoAD %}
