--- a/coffeeshop/static/coffeeshop/css/style_user.css
+++ b/coffeeshop/static/coffeeshop/css/style_user.css
@@ -70,22 +70,6 @@ header nav a:hover{
 }
 
 /** Css admin**/
-button{
-	font-size: 25px;
-	background-color: #9b0f26;
-	color: #9a9a9a;
-	color: white;
-	width: 200px;
-	height: 30px;
-	border: 0;
-	transition: all 500ms ease;
-}
-
-button:hover{
-	background-color: #7f0c20;
-    cursor: pointer;
-}
-
 .estoy{
 	border-right-width: 0;
 	background-color: rgb(194,194,194);
@@ -149,10 +133,16 @@ button:hover{
 .pa{
 	top: 5px;
 	position: relative;
-	left: 20px;
-	text-align: left;
+	left: 0px;
+	text-align: center;
 	font-size: 30px;
 	bottom: 3px;
+	width: 20%;
+	margin-bottom: 5px;
+	margin-top: 5px;
+	border-right-style: solid;
+	border-bottom-style: solid;
+	border-bottom-right-radius: 10px;
 }
 
 .Producto{
@@ -160,6 +150,7 @@ button:hover{
 	left: 80px;
 	top: 5px;
 	font-size: 25px;
+	width: 80%;
 }
 
 .Tipo{
@@ -167,6 +158,7 @@ button:hover{
 	left: 80px;
 	top: 5px;
 	font-size: 25px;
+	width: 80%;
 }
 
 .Proveedor{
@@ -174,9 +166,55 @@ button:hover{
 	left: 80px;
 	top: 5px;
 	font-size: 25px;
+	width: 80%;
+	margin-bottom: 10px;
+}
+
+.errorlist{
+	position: absolute;
+	color: red;
+	font-family: serif;
+	font-size: 15px;
+	left: 500px;
+	width: 180px;
 }
 
 hr{
 	position: relative;
-	top: 5px;
+	top: 10px;
+}
+
+.button_form{
+	position: absolute;
+	font-size: 27px;
+	background-color: #9b0f26;
+	color: #9a9a9a;
+	color: white;
+	width: 200px;
+	height: 40px;
+	border: 5px;
+	border-radius: 2px;
+	right: 3px;
+	bottom: 5px;
+}
+
+.button_form:hover{
+	background-color: #7f0c20;
+	cursor: hand;
+    cursor: pointer;
+}
+
+input{
+	margin: 2px;
+	width: 200px;
+	height: 30px;
+	border-style: solid;
+	font-size: 23px;
+}
+
+select{
+	margin-top: 5px;
+	height: 20px;
+	width: 80px;
+	font-size: 23px;
 }
