--- a/coffeeshop/templates/coffeeshop/check_sells.html
+++ b/coffeeshop/templates/coffeeshop/check_sells.html
@@ -3,13 +3,13 @@
 		<li><a href=" {% url 'coffeeshop:register_sell' %}">Registrar venta</a></li>
 		<li><a class="estoy" href=" {% url 'coffeeshop:check_sells' %}">Revisar ventas</a></li>
 		<li><a href=" {% url 'coffeeshop:add_products' %} ">Añadír producto</a></li>
-		<li><a href=" {% url 'coffeeshop:product' %}">Productos</li>
+		<li><a href=" {% url 'coffeeshop:product' %}">Productos</a></li>
 		<li><a href=" {% url 'coffeeshop:combo' %}">Combo</a></li>
 		<li><a href=" {% url 'coffeeshop:admin_register' %}">Registrar usuario</a></li>
 	{% endblock pestanasAD%}
 
 	{% block admi-areatrabajoAD %}			
-	{% endblock admi-areatrabajoAD%}
+	{% endblock admi-areatrabajoAD %}
 
-	{% block img-admin%}
-	{% endblock img-admin%}
+	{% block img-admin %}
+	{% endblock img-admin %}
