New page combos and url finished

--- a/coffeeshop/templates/coffeeshop/combos.html
+++ b/coffeeshop/templates/coffeeshop/combos.html
@@ -3,8 +3,8 @@
 		<li><a href=" {% url 'coffeeshop:register_sell' %}">Registrar venta</a></li>
 		<li><a href=" {% url 'coffeeshop:check_sells' %}">Revisar ventas</a></li>
 		<li><a href=" {% url 'coffeeshop:add_products' %} ">Añadír producto</a></li>
-		<li><a clas="estoy" href=" {% url 'coffeeshop:product' %}">Productos</a></li>
-		<li><a href=" {% url 'coffeeshop:combo' %}">Combo</a></li>
+		<li><a clas="estoy" href=" {% url 'coffeeshop:product_table' %}">Productos</a></li>
+		<li><a href=" {% url 'coffeeshop:combos' %}">Combo</a></li>
 		<li><a href=" {% url 'coffeeshop:admin_register' %}">Registrar usuario</a></li>
 	{% endblock pestanasAD%}
 
