--- a/coffeeshop/static/coffeeshop/css/style_user.css
+++ b/coffeeshop/static/coffeeshop/css/style_user.css
@@ -80,7 +80,7 @@ header nav a:hover{
 	width: 17%;
 	height: 30%;
 	text-align: center;
-	top: 30px;
+	top: 10px;
 	border: 3px;
 }
 
@@ -104,9 +104,9 @@ header nav a:hover{
 }
 
 .admi-areatrabajo{
-	position: absolute;
+	position: relative;
+	top: -357px;
 	left: 17%;
-	top: 150px;
 	width: 83%;
 	background-color: rgb(194,194,194);
 }
@@ -217,4 +217,33 @@ select{
 	height: 20px;
 	width: 80px;
 	font-size: 23px;
+}
+
+.table{
+	position: relative;
+	background-color: rgb(230, 230, 230);
+	left: 15px;
+	text-align: center;
+	font-size: 20px;
+	border: 3px solid #000;
+  	border-radius: 15px;
+  	border-spacing: 0;
+}
+
+.table td{
+	font-size: 25px;
+	padding-left: 5px;
+	padding-right: 5px;
+	border-bottom: 1px solid #000;
+	font-family: "Times New Roman", Georgia, Serif;
+	list-style-type: none;
+}
+
+.no_products{
+	position: relative;
+	color: red;
+	font-family: serif;
+	font-size: 25px;
+	width: 300px;
+	left: 30px;
 }
