sell template incomplete

--- a/coffeeshop/templates/coffeeshop/add_client.html
+++ b/coffeeshop/templates/coffeeshop/add_client.html
@@ -31,8 +31,8 @@
 						<td> {{ client.points }} </td>
 						<td>
 							<div class = "button_table">
-								<input type="submit" name="Edit">
-								<input type="submit" name="Delete">
+								<input type="submit" value="Edit">
+								<input type="submit" value="Delete">
 							</div>
 						</td>
 					</tr>
