--- a/coffeeshop/templates/coffeeshop/register_sell.html
+++ b/coffeeshop/templates/coffeeshop/register_sell.html
@@ -9,21 +9,11 @@
 	{% endblock pestanasAD%}
 
 	{% block admi-areatrabajoAD %}			
-		<div class="anadriProducto">
-				<button>Añadír</button>
-		</div>
-
-		<div class="infoCliente">
-				
-		</div>
-
-		<div class="tabla">
-				
-		</div>
-				
-		<div class="infoFactura">
-		
-		</div>
+		<form method ="POST">
+			{{ form }}
+			{{ form2 }}
+			{{ form3 }}
+		</form>
 	{% endblock admi-areatrabajoAD %}
 
 	{% block img-admin %}
