--- a/coffeeshop/templates/coffeeshop/admin_products.html
+++ b/coffeeshop/templates/coffeeshop/admin_products.html
@@ -37,8 +37,8 @@
 						<td> {{ product.stock }} </td>
 						<td>
 							<div class = "button_table">
-								<input type="submit" value="Edit">
-								<input type="submit" value="Delete">
+								<input type="submit" name="Edit">
+								<input type="submit" name="Delete">
 							</div>
 						</td>
 					</tr>
