--- a/coffeeshop/templates/coffeeshop/register_sell.html
+++ b/coffeeshop/templates/coffeeshop/register_sell.html
@@ -9,10 +9,19 @@
 	{% endblock pestanasAD%}
 
 	{% block admi-areatrabajoAD %}			
-		<form method ="POST">
-			{{ form }}
-			{{ form2 }}
-			{{ form3 }}
+		<form method ="POST"> {%csrf_token%}
+			<div class="form1"> {{ form }} </div>
+			<hr/>
+
+			<div class="form2"> {{ form2 }} </div>
+			<hr/>
+
+			<div class="form3"> {{ form3 }} </div>
+
+			<div class = "button_form">
+				<input type="submit" name="Vender">
+			</div>
+
 		</form>
 	{% endblock admi-areatrabajoAD %}
 
