--- a/coffeeshop/templates/coffeeshop/admin-base.html
+++ b/coffeeshop/templates/coffeeshop/admin-base.html
@@ -15,7 +15,7 @@
 {% block admi-areatrabajo %}
 	<div class="admi-areatrabajo">
 	{% block admi-areatrabajoAD %}
-	{% endblock %}
+	{% endblock admi-areatrabajoAD %}
 	</div>
 {% endblock admi-areatrabajo %}
  
