Añadiendo imagen usuario

--- a/coffeeshop/templates/coffeeshop/user-base.html
+++ b/coffeeshop/templates/coffeeshop/user-base.html
@@ -8,3 +8,33 @@
 		<a href="{% url 'coffeeshop:h4' %}">Combo</a>
 	</nav>
 {% endblock %}
+
+{% block admi-areatrabajo %}
+		
+	<!DOCTYPE html>
+<html>
+<head>
+	<title>Efecto</title>
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+	<link rel="stylesheet"  href="{% static 'coffeeshop/css/styles2.css' %}">
+	<meta charset="utf-8">
+</head>
+<body>
+	<div id="body">
+	<div id="info"> 
+		 <p id="headline">Que es?</p>
+		 <br> <br>
+		 <p id="info2">	El canal institucional se subdivide en multiples categorías que atienden diversas necesidades y perfiles de clientes. 
+
+		De los posibles consumos de café de una persona, el canal institucional cubre la mayor parte de ellos: Oficinas, restaurantes, hoteles, aerolíneas, cafeterías y eventos. 
+
+El canal HoReCa reúne los hoteles, restaurantes y cafeterías en quienes Procafecol ha activado planes de entrenamiento, capacitación y valoración de calidades en su servicio de café.</p>
+		</div>
+	</div>
+	<br>
+
+
+</body>
+</html>
+
+		{% endblock %}
