Se organizan los botones y pestañas

--- a/coffeeshop/templates/coffeeshop/add_client.html
+++ b/coffeeshop/templates/coffeeshop/add_client.html
@@ -31,8 +31,9 @@
 						<td> {{ client.points }} </td>
 						<td>
 							<div class = "button_table">
-								<input type="submit" value="Edit">
-								<input type="submit" value="Delete">
+								<input class="btnEdit" type="submit" value="Edit">
+								<input class="btnDelete" type="submit" value="Delete">
+								<input class="btnAdd" type="submit" value="+">
 							</div>
 						</td>
 					</tr>
