--- a/coffeeshop/templates/coffeeshop/admin-base.html
+++ b/coffeeshop/templates/coffeeshop/admin-base.html
@@ -20,4 +20,8 @@
 {% endblock admi-areatrabajo %}
  
 {% block admi-img %}
+	<div class="imagenes">
+		<img class="imagenes1" src="{% static 'coffeeshop/img/juanvaldez.png' %}" >
+		<img class="imagenes2" src="{% static 'coffeeshop/img/EafitNormal.png' %}" >
+	</div>
 {% endblock admi-img%}
