--- a/coffeeshop/templates/coffeeshop/register_sell.html
+++ b/coffeeshop/templates/coffeeshop/register_sell.html
@@ -17,11 +17,11 @@
 			<hr/>
 
 			<div class="form3"> {{ form3 }} </div>
-
-			<div class = "button_form">
-				<input type="submit" name="Vender">
+			
+			<div>
+				<input class="button_form" type="submit" value="Vender">
 			</div>
-
+			<hr/>
 		</form>
 	{% endblock admi-areatrabajoAD %}
 
