--- a/coffeeshop/static/coffeeshop/css/style_user.css
+++ b/coffeeshop/static/coffeeshop/css/style_user.css
@@ -76,11 +76,11 @@ header nav a:hover{
 }
 
 .butPrinci{
+	top: 0;
 	font-size: 25px;
 	width: 17%;
 	height: 30%;
 	text-align: center;
-	top: 10px;
 	border: 3px;
 }
 
@@ -104,30 +104,31 @@ header nav a:hover{
 }
 
 .admi-areatrabajo{
-	position: relative;
-	top: -357px;
+	position: absolute;
+	border-left-style: solid;
+	border: 2px;
+	top: 150px;
 	left: 17%;
+	height: 823px;
 	width: 83%;
-	background-color: rgb(194,194,194);
+	background-color: rgb(194, 194, 194);
 }
 
 .imagenes{
 	left: 0;
 	width: 15%;
-	bottom: 0px;
+	height: 465px;
 }
 
 .imagenes1{
 	width: 100%;
-	height: 30%;
-	bottom: 0;
+	height: 50%;
 }
 
 .imagenes2{
 	left: 0;
 	width: 100%;
-	height: 30%;
-	bottom: 0;
+	height: 40%;
 }
 
 .pa{
@@ -185,22 +186,15 @@ hr{
 
 .button_form{
 	position: relative;
-	font-size: 27px;
+	left: 85%;
+	border: 2px;
+	border-radius: 10px;
 	background-color: #9b0f26;
-	color: #9a9a9a;
 	color: white;
+	font-size: 27px;
 	width: 200px;
 	height: 40px;
-	border: 5px;
-	border-radius: 2px;
-	left: 1190px;
 	bottom: 3px;
-}
-
-.button_form:hover{
-	background-color: #7f0c20;
-	cursor: hand;
-    cursor: pointer;
 }
 
 input{
@@ -219,6 +213,7 @@ select{
 }
 
 .table{
+	top: 10px;
 	position: relative;
 	background-color: rgb(230, 230, 230);
 	left: 15px;
@@ -261,17 +256,67 @@ select{
 	position: relative;
 	text-align: left;
 	left: 80px;
-	top: 15px;
+	top: 10px;
 	font-size: 25px;
-	width: 26%;
-	height: 50%;
+	width: 20%;
+	height: 70%;
 }
 
 .form3{
 	position: relative;
 	text-align: left;
 	left: 80px;
-	top: 5px;
+	top: 15px;
 	font-size: 25px;
-	width: 80%;
+	width: 15%;
+	height: 70%;
+}
+
+.create_client{
+	position: relative;
+	text-align: left;
+	left: 80px;
+	top: 15px;
+	font-size: 30px;
+	width: 26%;
+	height: 50%;
+}
+
+.btnsaveC{
+	position: relative;
+	left: 400px;
+	border: 2px;
+	border-radius: 10px;
+	background-color: #9b0f26;
+	color: white;
+}
+
+.pCC{
+	border-right: 3px solid #000;
+	border-bottom: 3px solid #000;
+	border-bottom-right-radius: 15px;
+	font-size: 40px;
+	width: 20%;
+}
+
+.btnDelete{
+	border: 2px;
+	border-radius: 10px;
+	background-color: #9b0f26;
+	color: white;
+}
+
+.btnEdit{
+	border: 2px;
+	border-radius: 10px;
+	background-color: #354C81;
+	color: white;
+}
+
+.btnAdd{
+	border: 2px;
+	border-radius: 20px;
+	background-color: orange;
+	color: white;
+	width: 30px;
 }
