--- a/coffeeshop/templates/coffeeshop/client.html
+++ b/coffeeshop/templates/coffeeshop/client.html
@@ -1,11 +1,22 @@
-{% extends 'coffeeshop/base.html' %}
+{% extends 'coffeeshop/admin-base.html' %}
+	{% block pestanasAD %}
+		<li><a href=" {% url 'coffeeshop:register_sell' %}">Registrar venta</a></li>
+		<li><a href=" {% url 'coffeeshop:check_sells' %}">Revisar ventas</a></li>
+		<li><a href=" {% url 'coffeeshop:add_products' %} ">Añadír producto</a></li>
+		<li><a href=" {% url 'coffeeshop:product_table' %}">Productos</a></li>
+		<li><a href=" {% url 'coffeeshop:combos' %}">Combo</a></li>
+		<li><a class="estoy" href=" {% url 'coffeeshop:admin_register' %}">Registrar usuario</a></li>
+	{% endblock pestanasAD %}
 
-{% block pestanas %}
-	<form method= "POST"> {% csrf_token %}
-		{{ form.as_p }}
-		<input type = "submit" name="save">
-	</form>
-{% endblock pestanas  %}
+	{% block admi-areatrabajoAD %}
+		<form method= "POST"> {% csrf_token %}
+			<p class="pCC">Create client</p>
+			<div class="create_client">{{ form.as_p }}</div>
+			<input class="btnsaveC" type = "submit" value="SAVE">
+			<hr/>
+		</form>
 
+	{% endblock admi-areatrabajoAD %}
 
-
+	{% block img-admin %}
+	{% endblock img-admin %}
