--- a/coffeeshop/templates/coffeeshop/combos.html
+++ b/coffeeshop/templates/coffeeshop/combos.html
@@ -4,11 +4,12 @@
 		<li><a href=" {% url 'coffeeshop:check_sells' %}">Revisar ventas</a></li>
 		<li><a href=" {% url 'coffeeshop:add_products' %} ">Añadír producto</a></li>
 		<li><a href=" {% url 'coffeeshop:product_table' %}">Productos</a></li>
-		<li><a clas="estoy" href=" {% url 'coffeeshop:combos' %}">Combo</a></li>
+		<li><a class="estoy" href=" {% url 'coffeeshop:combos' %}">Combo</a></li>
 		<li><a href=" {% url 'coffeeshop:admin_register' %}">Registrar usuario</a></li>
 	{% endblock pestanasAD%}
 
-	{% block admi-areatrabajoAD %}			
+	{% block admi-areatrabajoAD %}	
+	
 	{% endblock admi-areatrabajoAD %}
 
 	{% block img-admin %}
