Se organiza la pestaña venta

--- a/coffeeshop/templates/coffeeshop/register_sell.html
+++ b/coffeeshop/templates/coffeeshop/register_sell.html
@@ -10,7 +10,7 @@
 
 	{% block admi-areatrabajoAD %}			
 		<form method ="POST"> {%csrf_token%}
-			<div class="form1"> {{ form }} </div>
+			<div class="Producto"> {{ form }} </div>
 			<hr/>
 
 			<div class="form2"> {{ form2 }} </div>
