--- a/coffeeshop/static/coffeeshop/css/style_user.css
+++ b/coffeeshop/static/coffeeshop/css/style_user.css
@@ -242,34 +242,39 @@ select{
 	left: 30px;
 }
 
-.form1{
-	position: relative;
-	text-align: left;
-	left: 80px;
-	top: 5px;
-	font-size: 25px;
-	width: 26%;
-	height: 50%;
-}
-
 .form2{
 	position: relative;
-	text-align: left;
 	left: 80px;
 	top: 10px;
 	font-size: 25px;
-	width: 20%;
-	height: 70%;
+	width: 70%;
+	height: 40%;
+}
+
+.form2 ul{
+	position: absolute;
+	left: 600px;
+	bottom: 12px;
+}
+
+hr{
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
 .form3{
 	position: relative;
-	text-align: left;
 	left: 80px;
 	top: 15px;
 	font-size: 25px;
-	width: 15%;
-	height: 70%;
+	width: 50%;
+	height: 40%;
+}
+
+.form3 ul{
+	position: absolute;
+	left: 600px;
+	bottom: 12px;
 }
 
 .create_client{
