Leer mas terminado

--- a/coffeeshop/templates/coffeeshop/product_description.html
+++ b/coffeeshop/templates/coffeeshop/product_description.html
@@ -1,8 +1,21 @@
 {% extends 'coffeeshop/base.html' %}
-{% block pestanas %}
-<h1> {{ product.name_product }} </h1>
-<p> {{ product.stock }} </p>
-<p> {{ product.id_product_type.product_description }} </p>
-<p> {{ product.id_product_type.product_type }} </p>
-<p> {{ product.price }} </p>
-{% endblock pestanas %}
+
+{% block title %} Descripción {% endblock title %}
+
+{% block pestana-usuario %}
+	<nav>
+		<a href="{% url 'coffeeshop:index' %}">Inicio</a>
+	</nav>
+{% endblock %}
+
+{% block  admi-areatrabajo  %}
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+	<div class="product_description">
+		<h1 class="desc_name"> {{ product.name_product }} </h1>
+		<p class="titleDsc"><strong><i>Descripción: </i></strong></p>
+		<p class="titleDsc"> {{ product.id_product_type.product_description }} </p>
+		<p class="titleDsc"><strong><i>Cantidad en la tienda: </i></strong> {{ product.stock }} </p>
+		<p class="titleDsc"><strong><i>Tipo:</i></strong> {{ product.id_product_type.product_type }} </p>
+		<p class="titleDsc"><strong><i> Precio ind: </i></strong> {{ product.price }} </p>
+	</div>
+{% endblock admi-areatrabajo%}
