--- a/coffeeshop/static/coffeeshop/css/style_user.css
+++ b/coffeeshop/static/coffeeshop/css/style_user.css
@@ -325,3 +325,30 @@ hr{
 	color: white;
 	width: 30px;
 }
+
+/**descripcion del producto**/
+.product_description{
+	position: relative;
+	width: 30%;
+	left: 35%;
+	text-align: center;
+	border: 3px solid;
+	border-color: #FFEBCD;
+	border-radius: 15px;
+	background-color: #FFEBCD;
+	bottom: 15px;
+}
+
+.desc_name{
+	font-family: 'Indie Flower', cursive;
+	font-size: 70px;
+}
+
+.titleDsc{
+	font-size: 25px;
+}
+
+.titleDsc i{
+	font-size: 30px;
+	color: rgb(140, 140, 140);
+}
