Organizado el html de user

--- a/coffeeshop/templates/coffeeshop/base.html
+++ b/coffeeshop/templates/coffeeshop/base.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		{% block letter %} {% endblock letter %}
 		<title>{% block title %}User{% endblock %}</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="{% static 'coffeeshop/css/style_user.css' %}" />
 	</head>	
 
 	<body>
