--- a/coffeeshop/templates/coffeeshop/h3.html
+++ b/coffeeshop/templates/coffeeshop/h3.html
@@ -1,4 +1,4 @@
-{% extends 'coffeeshop/base.html' %}
+{% extends 'coffeeshop/user-base.html' %}
 {% load static %}
 {% block pestana-usuario %}
 	<nav>
