--- a/coffeeshop/templates/coffeeshop/h4.html
+++ b/coffeeshop/templates/coffeeshop/h4.html
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-#4
-
-=======
-{% extends 'coffeeshop/base.html' %}
+{% extends 'coffeeshop/user-base.html' %}
 {% load static %}
 {% block pestana-usuario %}
 	<nav>
@@ -14,6 +10,5 @@
 
 {% endblock %}
 {% block admi-areatrabajo %}
-<h1> Esta parte son los combos </h1>
+	<h1> Esta parte son los combos </h1>
 {% endblock %}
->>>>>>> 7a756d663711080d89298ac677a847164a446db8
