--- a/coffeeshop/static/coffeeshop/css/styles2.css
+++ b/coffeeshop/static/coffeeshop/css/styles2.css
@@ -6,6 +6,67 @@
 	color: rgb(234, 234, 234);
 }
 
+header {
+	width: 100%;
+	height: 20%;
+	overflow: hidden;
+	background:#252932;
+	margin-bottom: 20px; 
+}
+
+.wrapper {
+	width: 90%;
+	margin: auto;
+	overflow: hidden;
+	height: 150px;
+}
+
+.logo{
+	position: absolute;
+	color: #f2f2f2;
+	font-size: 50px;
+	line-height: 200px;
+	height: 30px;
+}
+
+header nav {
+	float: right;
+	line-height: 200px;
+	height: 140px;
+}
+
+header nav a {
+	display: inline-block;
+	color: #fff;
+	text-decoration: none;
+	padding: 10px 20px;
+	line-height: normal;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+header nav a:hover{
+	background: #354C81;
+	border-radius: 50px;
+}
+
+/** PARTE DE ABAJO*/
+#f1 {
+	background: #252932;
+  	height: 80px;
+  	width: 100%;
+  	padding-top: 27px;
+}
+
+#f3 {
+	width: 100%;
+  	height: 90px;
+  	background: #354C81;
+  	color: #FFF;
+  	font-size: 13px;
+  	padding-top: 35px;
+}
+
 #body{
 	background-image: url(1.jpg); 
 	width: 1200px;
