--- a/coffeeshop/templates/coffeeshop/admin-base.html
+++ b/coffeeshop/templates/coffeeshop/admin-base.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% block title %} ADMIN-Juan Valdez {% endblock %}
+{% block letter %} 	
+<link rel="stylesheet" type="text/css" href="{% static 'coffeeshop/css/style_user.css' %}" />
+{% endblock letter%}	
 
 {% block pestanas %}
 <div class="butPrinci">
