--- a/coffeeshop/templates/coffeeshop/h2.html
+++ b/coffeeshop/templates/coffeeshop/h2.html
@@ -1,1 +1,14 @@
-#2
+{% extends 'coffeeshop/user-base.html' %}
+{% load static %}
+{% block pestana-usuario %}
+	<nav>
+		<a href="{% url 'coffeeshop:index' %}">Inicio</a>
+		<a href="{% url 'coffeeshop:h2' %}">Puntos Jv</a>
+		<a href="{% url 'coffeeshop:h3' %}">Promociones</a>
+		<a href="{% url 'coffeeshop:h4' %}">Combos</a>
+	</nav>
+
+{% endblock %}
+{% block admi-areatrabajo %}
+<h1> Esta parte son los puntos </h1>
+{% endblock %}
