--- a/coffeeshop/templates/coffeeshop/base.html
+++ b/coffeeshop/templates/coffeeshop/base.html
@@ -17,13 +17,13 @@
 		</header>
 
 		{% block pestanas %}
-		{% endblock %}
+		{% endblock pestanas%}
 
 		{% block admi-areatrabajo %}
-		{% endblock %}
+		{% endblock admi-areatrabajo %}
 		
 		{% block admi-img %}
-		{% endblock %}
+		{% endblock admi-img %}
 
 	<div id="f1"><center> <a href="https://www.facebook.com/" target="_blank"><img src="{% static 'coffeeshop/img/f.png' %}" width="50"></a> <a href="https://twitter.com/" target="_blank"><img src="{% static 'coffeeshop/img/t.png' %}" width="50"></a> <a href="https://plus.google.com/" target="_blank"><img src="{% static 'coffeeshop/img/g.png' %}" width="50"></a> </center></div>
 		<div id="f3"><br><center>Copyright 2017 JuanValdez | Todos los derechos reservados.<center></div>
