--- a/coffeeshop/static/coffeeshop/css/style_user.css
+++ b/coffeeshop/static/coffeeshop/css/style_user.css
@@ -326,6 +326,25 @@ hr{
 	width: 30px;
 }
 
+.Erase{
+	position: relative;
+	font-size: 30px;
+	width: 50%;
+	text-align: center;
+	border: 3px solid;
+	border-color: red;
+	border-radius: 15px;
+	background-color:#9b0f26;
+	color: white;
+	top: 25px;
+	left: 25px;
+}
+
+.Cancelar{
+	color: black;
+	font-size: 25px;
+}
+
 /**descripcion del producto**/
 .product_description{
 	position: relative;
