--- a/coffeeshop/templates/coffeeshop/client.html
+++ b/coffeeshop/templates/coffeeshop/client.html
@@ -1,22 +1,15 @@
-{% extends 'coffeeshop/admin-base.html' %}
-	{% block pestanasAD %}
-		<li><a href=" {% url 'coffeeshop:register_sell' %}">Registrar venta</a></li>
-		<li><a href=" {% url 'coffeeshop:check_sells' %}">Revisar ventas</a></li>
-		<li><a href=" {% url 'coffeeshop:add_products' %} ">Añadír producto</a></li>
-		<li><a href=" {% url 'coffeeshop:product_table' %}">Productos</a></li>
-		<li><a href=" {% url 'coffeeshop:combos' %}">Combo</a></li>
-		<li><a class="estoy" href=" {% url 'coffeeshop:admin_register' %}">Registrar usuario</a></li>
-	{% endblock pestanasAD %}
+{% extends 'coffeeshop/add_client.html' %}
 
-	{% block admi-areatrabajoAD %}
-		<form method= "POST"> {% csrf_token %}
-			<p class="pCC">Create client</p>
-			<div class="create_client">{{ form.as_p }}</div>
-			<input class="btnsaveC" type = "submit" value="SAVE">
-			<hr/>
-		</form>
+{% block admi-areatrabajoAD %}
+	<form method= "POST"> {% csrf_token %}
+		<p class="pCC">Create client</p>
+		<div class="create_client">{{ form.as_p }}</div>
+		<input class="btnsaveC" type = "submit" value="SAVE">
+		<hr/>
+	</form>
+{% endblock admi-areatrabajoAD %}
 
-	{% endblock admi-areatrabajoAD %}
+{% block img-admin %}
+{% endblock img-admin %}
 
-	{% block img-admin %}
-	{% endblock img-admin %}
+
