--- a/coffeeshop/templates/coffeeshop/product_delete.html
+++ b/coffeeshop/templates/coffeeshop/product_delete.html
@@ -1,10 +1,11 @@
-{% extends 'coffeeshop/base.html' %}
+{% extends 'coffeeshop/admin_products.html' %}
 
-{% block admi-areatrabajo %}
-
-<form method="POST"> {% csrf_token %}
-	<h3> Esta seguro que desea eliminar el registro el producto {{ object.name_product }} </h3>
-	<button type="submit"> Si, eliminar </button>
-	<a href={% url 'coffeeshop:product_table' %}> Cancelar </a>
-</form>
-{% endblock admi-areatrabajo %}
+{% block admi-areatrabajoAD %}
+<div class="Erase">
+	<form method="POST"> {% csrf_token %}
+		<h3> Esta seguro que desea eliminar el registro el producto {{ object.name_product }} ?</h3>
+		<button type="submit"> Si, eliminar </button>
+		<a class="Cancelar" href={% url 'coffeeshop:product_table' %}> Cancelar </a>
+	</form>
+</div>
+{% endblock admi-areatrabajoAD %}
