--- a/coffeeshop/templates/coffeeshop/admin_products.html
+++ b/coffeeshop/templates/coffeeshop/admin_products.html
@@ -37,7 +37,9 @@
 						<td> {{ product.stock }} </td>
 						<td>
 							<div class = "button_table">
+								<form action="{% url 'coffeeshop:product_edit' product.id_product %}">
 								<input class="btnEdit" type="submit" value="Edit">
+								</form>
 								<form action="{% url 'coffeeshop:product_delete' product.id_product%}">
 								<input class="btnDelete" type="submit" value="Delete">
 								</form>
