--- a/coffeeshop/static/coffeeshop/css/style_user.css
+++ b/coffeeshop/static/coffeeshop/css/style_user.css
@@ -117,7 +117,7 @@ header nav a:hover{
 .imagenes{
 	left: 0;
 	width: 15%;
-	height: 465px;
+	height: 525px;
 }
 
 .imagenes1{
@@ -128,7 +128,7 @@ header nav a:hover{
 .imagenes2{
 	left: 0;
 	width: 100%;
-	height: 40%;
+	height: 30%;
 }
 
 .pa{
@@ -370,4 +370,20 @@ hr{
 .titleDsc i{
 	font-size: 30px;
 	color: rgb(140, 140, 140);
+}
+
+.btnContinuar{
+	border: 2px;
+	border-radius: 10px;
+	background-color: white;
+	color: black;
+	font-size: 27px;
+	width: 180px;
+	height: 30px;
+	bottom: 3px;	
+}
+
+.btnContinuar:hover{
+	background: #B22222;
+    color: white;
 }
