--- a/coffeeshop/static/coffeeshop/css/styles2.css
+++ b/coffeeshop/static/coffeeshop/css/styles2.css
@@ -108,3 +108,48 @@ p#info2{
 div#imagen:hover p#info2{
 	margin-top: 70px; 
 }
+
+.table{
+	position: relative;
+	background-color: rgb(230, 230, 230);
+	left: 25%;
+	text-align: center;
+	font-size: 20px;
+	border: 3px solid #000;
+  	border-radius: 15px;
+  	border-spacing: 0;
+  	color: black;
+}
+
+.table td{
+	position: relative;
+	width: 30%;
+	text-align: center;
+	font-size: 25px;
+	padding-left: 5px;
+	padding-right: 5px;
+	border-bottom: 1px solid #000;
+	list-style-type: none;
+	color:black;
+}
+
+h3{
+	position: relative;
+	width: 30%;
+	left: 35%;
+	text-align: center;
+	bottom: 15px;
+	color: black;
+	font-size: 40px;
+}
+
+.no_products{
+	position: relative;
+	width: 30%;
+	left: 21%;
+	text-align: center;
+	color: red;
+	font-family: serif;
+	font-size: 15px;
+	width: 300px;
+}
