--- a/coffeeshop/templates/coffeeshop/h2.html
+++ b/coffeeshop/templates/coffeeshop/h2.html
@@ -1,14 +1,34 @@
 {% extends 'coffeeshop/user-base.html' %}
 {% load static %}
-{% block pestana-usuario %}
-	<nav>
-		<a href="{% url 'coffeeshop:index' %}">Inicio</a>
-		<a href="{% url 'coffeeshop:h2' %}">Puntos Jv</a>
-		<a href="{% url 'coffeeshop:h3' %}">Promociones</a>
-		<a href="{% url 'coffeeshop:h4' %}">Combos</a>
-	</nav>
-
-{% endblock %}
 {% block admi-areatrabajo %}
-<h1> Esta parte son los puntos </h1>
+	<h3>¡¡¡Best clients!!!</h3>
+	<table class = "table">
+			<thead class="tableH">
+				<tr>
+					<td>Nombre</td>
+					<td>Identificación</td>
+					<td>Ciudad</td>
+					<td>Puntos</td>
+				</tr>
+			</thead>
+
+			<tbody>
+				
+				{% if object_list %}
+					{% for client in object_list %}
+					<tr>
+						<td> {{ client.name_client }} </td>
+						<td> {{ client.id_client }} </td>
+						<td> {{ client.id_city }} </td>
+						<td> {{ client.points }} </td>
+					</tr>
+					{% endfor %}
+
+				{% else %}
+					<p class="no_products"> --No clients here-- </p>
+				{% endif %}
+				
+			</tbody>
+		</table>
+		<br><br><br><br><br>
 {% endblock %}
