--- a/coffeeshop/templates/coffeeshop/minus_clients.html
+++ b/coffeeshop/templates/coffeeshop/minus_clients.html
@@ -1,7 +1,7 @@
 {% extends 'coffeeshop/user-base.html' %}
 {% load static %}
 {% block admi-areatrabajo %}
-	<h3>¡¡¡Best clients!!!</h3>
+	<h3>¡¡¡Minimus clients!!!</h3>
 	<table class = "table">
 			<thead class="tableH">
 				<tr>
